@@ -36,18 +36,14 @@ issue 35:
 issue 55:
     bug: alpha textures are rendered not behind alpha-textures
     since: alpha rendering was implemented
-    possible fix: disable depth test & order faces by ourselves OR change rendering mode
+    fix: order alpha face rendering! (maybe implement an AlphaRenderingRenderer extends ICustomDrawRenderer)
 
-issue 80:
+issue 80: [unable to reproduce, check and mark as resolved when not occur anymore]
     bug: in some cases, mouse button up is still not handled
 
-issue 96: [maybe fixed]
+issue 96: [maybe fixed, check and mark as resolved when not occur anymore]
     bug: SlotCopy does not always work correctly
     possible fix: rewrite SlotCopy
-
-issue 98: [maybe fixed]
-    bug: when moving & reinserting an item in hotbar from player inventory main the item in the hotbar may not be rendered
-    possible fix: see issue 96
 
 issue 100:
     bug: fps counter is constantly changing making it hard to read from
@@ -68,13 +64,14 @@ issue 129:
     bug: some fence faces are not rendered [invalid texture rotation?]
 
 issue 137:
-    bug: coal block has no fuel level
+    bug: coal block has no fuel level [maybe general problem?]
 
 issue 139:
     bug: during in-game generation, block faces of neighbor chunks are not updated
+    possible fix: update all blocks next to the new chunk
 
 issue 140:
-    bug: sometimes, you fall through one block (in gamemode 0)
+    bug: sometimes, you fall through one or more block (in gamemode 0)
         reproduce:
             use diamond pickaxe and break stone blocks until bottom of world in gamemode 0
 
